bk_ida/gccida/g0/store_constructor_field
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor_field/src/expr.c:4803:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor_field/src/expr.c:4809:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor_field/src/expr.c:4821:71: error: use of undeclared identifier 'machine_mode'
if ( *( ( _BYTE *)target + 2) == 51 || bitpos % get_mode_alignment( ( machine_mode)*( ( unsigned __int8 *)target + 2)) ) 
                                                                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor_field/src/obj/expr.o] Error 1
